--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.7.0",
     "react-router-dom": "^7.7.0",
+    "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
